Logica implementada, calculadora acabada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,36 @@
 <div class="container w-50 mt-5">
   <div class="row screen-expression">
     <div class="col-12 d-flex align-items-center">
-      <input type="text" class="text-end" />
+      <input type="text" class="text-end" [(ngModel)]="expressionScreen"/>
     </div>
   </div>
   <div class="row screen-result">
     <div class="col-12 d-flex align-items-center">
-      <input type="text" class="text-end" />
+      <input type="text" class="text-end" [(ngModel)]="resultScreen"/>
     </div>
   </div>
   <div class="row buttons">
     <div class="col-md-9 col-12 buttons-numbers">
-      <div class="button-number-div">9</div>
-      <div class="button-number-div">8</div>
-      <div class="button-number-div">7</div>
-      <div class="button-number-div">6</div>
-      <div class="button-number-div">5</div>
-      <div class="button-number-div">4</div>
-      <div class="button-number-div">3</div>
-      <div class="button-number-div">2</div>
-      <div class="button-number-div">1</div>
-      <div class="button-number-div">.</div>
-      <div class="button-number-div">0</div>
-      <div class="button-number-div">00</div>
+      <div class="button-number-div" (click)="addToExpression('9')">9</div>
+      <div class="button-number-div" (click)="addToExpression('8')">8</div>
+      <div class="button-number-div" (click)="addToExpression('7')">7</div>
+      <div class="button-number-div" (click)="addToExpression('6')">6</div>
+      <div class="button-number-div" (click)="addToExpression('5')">5</div>
+      <div class="button-number-div" (click)="addToExpression('4')">4</div>
+      <div class="button-number-div" (click)="addToExpression('3')">3</div>
+      <div class="button-number-div" (click)="addToExpression('2')">2</div>
+      <div class="button-number-div" (click)="addToExpression('1')">1</div>
+      <div class="button-number-div" (click)="addToExpression('.')">.</div>
+      <div class="button-number-div" (click)="addToExpression('0')">0</div>
+      <div class="button-number-div" (click)="addToExpression('00')">00</div>
     </div>
     <div class="col buttons-operators">
-      <div class="button-operator-div">DEL</div>
-      <div class="button-operator-div">/</div>
-      <div class="button-operator-div">X</div>
-      <div class="button-operator-div">-</div>
-      <div class="button-operator-div">+</div>
-      <div class="button-operator-div">=</div>
+      <div class="button-operator-div" (click)="clearScreen()">DEL</div>
+      <div class="button-operator-div" (click)="addToExpression('/')">/</div>
+      <div class="button-operator-div" (click)="addToExpression('*')">X</div>
+      <div class="button-operator-div" (click)="addToExpression('-')">-</div>
+      <div class="button-operator-div" (click)="addToExpression('+')">+</div>
+      <div class="button-operator-div" (click)="calculate()">=</div>
     </div>
   </div>
 </div>
